Fixed background images not loading on ios devices

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -120,7 +120,9 @@ body {
   height: 100%;
   width: 100%;
   position: relative;
-  background: url(../img/washington.jpg) no-repeat center center fixed; 
+  background-image: url(../img/washington.jpg);
+  background-position: fixed;
+  background-size: cover; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -172,7 +174,9 @@ i.service-icon:hover {
   display: table;
   height: 400px;
   width: 100%;
-  background: url(../img/datacenter.jpg) no-repeat center center fixed; 
+  background-image: url(../img/datacenter.jpg);
+  background-position: fixed;
+  background-size: cover; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -180,23 +184,33 @@ i.service-icon:hover {
 }
 
 .callout.bahrain {
-  background: url(../img/bahrain.jpg) no-repeat center center fixed;
+  background-image: url(../img/bahrain.jpg);
+  background-position: fixed;
+  background-size: cover;
 }
 
 .callout.mexico {
-  background: url(../img/mexico.jpg) no-repeat center center fixed;
+  background-image: url(../img/mexico.jpg);
+  background-position: fixed;
+  background-size: cover;
 }
 
 .callout.vienna {
-  background: url(../img/vienna.jpg) no-repeat center center fixed;
+  background-image: url(../img/vienna.jpg);
+  background-position: fixed;
+  background-size: cover;
 }
 
 .callout.paris {
-  background: url(../img/paris.jpg) no-repeat center center fixed;
+  background-image: url(../img/paris.jpg);
+  background-position: fixed;
+  background-size: cover;
 }
 
 .callout.arab {
-  background: url(../img/arab.jpg) no-repeat center center fixed;
+  background-image: url(../img/arab.jpg);
+  background-position: fixed;
+  background-size: cover;
 }
 /* Portfolio */
 
